Add mirador viewer component, start adding text/info

--- a/app/src/assets/main.scss
+++ b/app/src/assets/main.scss
@@ -3,6 +3,7 @@
 
 // Import a Google Font
 @import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
 
 // colors
 $bgcolor-purple: rgb(209, 204, 219);
